# computational-social-science

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
docs/: .gitattributes  day-1.html  day-2.html  day-3.html  day-4.html  day-5 2.html  day-5 3.html  day-5 4.html  day-5 5.html  day-5 6.html  day-5.html  day-6.html
graphical_models/: box_loop_latent_variable_models.gv  boxes_loop.gv  design_pipeline_youtube.gv  eda_text_analysis.gv
icsspy/: __init__.py  cleaners.py  networks.py  networks_nx.py  paths.py  plotting.py  simulations.py  text.py  utils.py  youtube.py
notebooks/: 2024-GESIS-1-setup.qmd  2024-GESIS-2-1-obtaining-data-scraping.qmd  2024-GESIS-2-2-obtaining-data-apis.qmd  2024-GESIS-3-1-text-analysis-foundations.qmd  2024-GESIS-3-1-text-modelling-sentinment.qmd  2024-GESIS-3-2-text-analysis-transformers.qmd  2024-GESIS-3-2-text-modelling-topics.qmd  2024-GESIS-4-1-network-analysis-political-blogs.qmd  2024-GESIS-4-2-network-analysis-enron.qmd  2024-GESIS-5-1-abms.qmd  2024-GESIS-5-abms.qmd  2024-GESIS-6-1-project.qmd
scripts/: collect_configs.py  download_models.py  draw_graphical_models.py  enter_docker.py  fetch_course_outputs.py  render_slides.py
setup/: contributor-guide.md  graphtool-pymc.yaml  graphtool.yaml  leaves.txt  original-setup-guide.md  setup-guide.md
slides/: .gitignore  _day-4-community-detection.qmd  _day-4-force-directed-visualization.qmd  _day-4-force-directed_visualization.qmd  _day-4-generative-modelling-networks.qmd  _day-4-learning-objectives.qmd  _day-4-modularity-maximization-is-bad.qmd  _day-4-origins.qmd  _day-4-sna-topics.qmd  _day-4-tutorial-enron.qmd  _day-4-tutorial-plan.qmd  _day-4-tutorial-political-blogs.qmd  _day-4-tutorial-youtube.qmd  _day-5-CUT-illustrative-models.qmd  _day-5-abms-101.qmd  _day-5-abms.qmd  _day-5-associative-learning.qmd  _day-5-complex-contagions.qmd  _day-5-copenhagen-networks-study-sbm.qmd  (+35 more)
(+1602 files in other folders)
